--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -6,19 +6,26 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
-* {
+*,
+*::after,
+*::before {
     margin:0;
     padding: 0;
-    box-sizing: boder-box;
+    box-sizing: inherit;
+}
+
+html {
+    font-size: 62.5%;
 }
 
 body {
     font-family: "lato"sans-serif;
     font-weight: 400;
-    font-size: 16px;
     line-height: 1.7;
     color:#777;
-    padding: 30px;
+    padding: 3rem;
+    box-sizing: border-box;
+    
 }
 
 .header {
@@ -35,18 +42,18 @@ body {
     
 }
 
-.logo-box {
+.header__logo-box {
     position: absolute;
-    top: 40px;
-    left:40px;
+    top: 4rem;
+    left:4rem;
 }
 
-.logo {
+.header__logo {
 
-    height: 35px;
+    height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
     position: absolute;
     top: 40%;
     left:50%;
@@ -58,15 +65,15 @@ body {
     color:#fff;
     text-transform: uppercase;
     backface-visibility: hidden;
-    margin-bottom: 60px;
+    margin-bottom: 6rem;
 }
 
 
-.heading-primary-main{
+.heading-primary--main{
     display: block;
-    font-size: 60px;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
     animation-name: moveInLeft;
     animation-duration: 1s;
     animation-timing-function: ease-out;
@@ -75,22 +82,22 @@ body {
     animation-iteration-count: 3; */
 }
 
-.heading-primary-sub{
+.heading-primary--sub{
     display: block;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 17.4px;
+    letter-spacing: 1.74rem;
     animation: moveInRight 1s ease-out;
 }
 @keyframes moveInLeft{
     0% {
         opacity: 0;
-        transform: translateX(-100px);
+        transform: translateX(-10rem);
 
     }
 
     80% {
-        transform: translateX(10px);
+        transform: translateX(10rem);
     }
 
     100% {
@@ -102,12 +109,12 @@ body {
 @keyframes moveInRight{
     0% {
         opacity: 0;
-        transform: translateX(100px);
+        transform: translateX(10rem);
 
     }
 
     80% {
-        transform: translateX(-10px);
+        transform: translateX(-1rem);
     }
 
     100% {
@@ -119,7 +126,7 @@ body {
 @keyframes moveInButton{
     0% {
         opacity: 0;
-        transform: translateY(40px);
+        transform: translateY(4rem);
 
     }
 
@@ -133,25 +140,26 @@ body {
 .btn:visited {
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 40px;
+    padding: 1.5rem 4rem;
     display: inline-block;
-    border-radius: 100px;
+    border-radius: 10rem;
     transition: all .2s;
     position: relative;
+    font-size: 1.6rem;
 
 }
 
 .btn:hover {
-    transform: translateY(-3px);
+    transform: translateY(-.3rem);
     box-shadow: 0 10px 20px rgb(0, 0, 0,0.2);
 }
 
 .btn:active {
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgb(0, 0, 0, 0.2);
+    transform: translateY(-.1rem);
+    box-shadow: 0 .5rem 1rem rgb(0, 0, 0, 0.2);
 }
 
-.btn-white {
+.btn--white {
     background-color: #fff;
     color: #777;
 }
@@ -161,7 +169,7 @@ body {
     display: inline-block;
     height: 100%;
     width: 100%;
-    border-radius: 100px;
+    border-radius: 10rem;
     position: absolute;
     top: 0;
     left: 0;
@@ -169,7 +177,7 @@ body {
     transition: all .4s;
     }
 
-.btn-white::after{
+.btn--white::after{
     background-color: #fff;
 }
 
@@ -178,7 +186,7 @@ body {
     opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
     animation: moveInButton 0.5s ease-out 0.75s;
     animation-fill-mode: backwards;
 }
