create custom grid with float and clear

--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -6,3 +6,10 @@
  $color-white: #fff;
  $color-dark-gray:#777;
  $color-black:#000;
+
+ // Grid
+$grid-width:114rem;
+$gap-col:6rem;
+$gap-row:8rem;
+
+
