--- a/Natours/sass/base/_typography.scss
+++ b/Natours/sass/base/_typography.scss
@@ -13,7 +13,7 @@ body {
     backface-visibility: hidden;
     margin-bottom: 6rem;
 
-    &&--main{
+    &--main{
         display: block;
         font-size: 6rem;
         font-weight: 400;
@@ -25,7 +25,7 @@ body {
 
     }
     
-    &&--sub{
+    &--sub{
         display: block;
         font-size: 2rem;
         font-weight: 700;
