improve image style

--- a/Natours/sass/components/_composition.scss
+++ b/Natours/sass/components/_composition.scss
@@ -35,5 +35,12 @@
     
     }
 
+    // composition:hover composition_photo:not(:hover)
+
+    &:hover &__photo:not(:hover){
+
+        transform: scale(0.9);
+    }
+
     
   }
