--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -184,6 +184,8 @@ body {
       transform: scale(1.05) translateY(-2rem);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.4);
       z-index: 20; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.9); }
 
 .header {
   height: 95vh;
