--- a/Natours/sass/base/_typography.scss
+++ b/Natours/sass/base/_typography.scss
@@ -39,6 +39,7 @@ body {
     background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark );
     display: inline-block;
     -webkit-background-clip: text;
+    background-clip: 0;
     color: transparent;
     transition: all 0.2s;
     letter-spacing: .2rem;
@@ -63,3 +64,4 @@ body {
         margin-bottom: 3rem;
     }
 }
+
