--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -22,3 +22,10 @@ transform: skewy(-7deg);
     transform: skewy(7deg);
 }
 }
+
+.section-tours {
+    
+    background-color: $color-gray-light-1;
+    padding: 25rem 0 50rem 0;
+    margin-top: -12rem;
+}
