--- a/Natours/sass/components/_card.scss
+++ b/Natours/sass/components/_card.scss
@@ -1,4 +1,7 @@
 .card {
+
+    // Functionality
+    
     perspective: 150rem;
     -moz-perspective: 150rem;
     position: relative;
@@ -7,7 +10,7 @@
 
     &__side {
         
-        font-size: 5rem;
+        
         height: 50rem;
         transition: all .8s ease;
         position: absolute;
@@ -16,6 +19,7 @@
         width: 100%;
         backface-visibility: hidden;
         border-radius: 1rem;
+        overflow: hidden;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
 
         &--front {
@@ -32,12 +36,10 @@
             }
         }
     }
-
-   
-
-
+    
+    
     &:hover &__side--front {
-        transform: rotateY(180deg);
+        transform: rotateY(-180deg);
     }
 
     &:hover &__side--back {
@@ -45,4 +47,69 @@
 
     }
 
+
+    // Front Side Styling
+
+    // Picture
+
+    &__picture {
+        background-size: cover;
+        height: 23rem;
+        background-blend-mode: screen;
+        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        
+
+        &--1 {
+            background-image:linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark) ,url(../img/nat-5.jpg);
+        }
+
+        &--2 {
+            background-image:linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark) ,url(../img/nat-5.jpg);
+        }
+
+        &--3 {
+            background-image:linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark) ,url(../img/nat-5.jpg);
+        }
+    }
+
+    // Heading
+
+    &__heading {
+        font-size: 2.8rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        text-align: center;
+        color:$color-white;
+        position: absolute;
+        top:12rem;
+        right:2rem;
+        width: 75%;
+
+      
+    }
+
+    &__heading-span {
+        padding: 1rem 1.5rem;
+    
+       box-decoration-break: clone;
+        &--1 {
+            background-image: linear-gradient(to right bottom, rgba($color-secondary-light, .8), rgba($color-secondary-dark,.8));
+           
+        }
+    }
+
+
+    // Details
+
+    &__details {
+
+        ul {
+            list-style: none;
+            width: 80%;
+            font-size: 1.5rem;
+            padding: 1rem;
+            
+
+        }
+    }
 }
