tour section compleet

--- a/Natours/sass/components/_card.scss
+++ b/Natours/sass/components/_card.scss
@@ -34,6 +34,13 @@
             &-1 {
                 background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
             }
+
+            &-2 {
+                background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+            }
+            &-3 {
+                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
+            }
         }
     }
     
@@ -64,11 +71,11 @@
         }
 
         &--2 {
-            background-image:linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark) ,url(../img/nat-5.jpg);
+            background-image:linear-gradient(to right bottom, $color-primary-light, $color-primary-dark) ,url(../img/nat-6.jpg);
         }
 
         &--3 {
-            background-image:linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark) ,url(../img/nat-5.jpg);
+            background-image:linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark) ,url(../img/nat-7.jpg);
         }
     }
 
@@ -96,6 +103,15 @@
             background-image: linear-gradient(to right bottom, rgba($color-secondary-light, .8), rgba($color-secondary-dark,.8));
            
         }
+        &--2 {
+            background-image: linear-gradient(to right bottom, rgba($color-primary-light, .8), rgba($color-primary-dark,.8));
+           
+        }
+
+        &--3 {
+            background-image: linear-gradient(to right bottom, rgba($color-tertiary-light, .8), rgba($color-tertiary-dark,.8));
+           
+        }
     }
 
 
@@ -106,10 +122,53 @@
         ul {
             list-style: none;
             width: 80%;
+            margin: 0 auto;
+            
+            li {
+            text-align: center;
             font-size: 1.5rem;
             padding: 1rem;
-            
 
+            &:not(:last-child) {
+                border-bottom: 1px solid #eee;
+            }
         }
     }
-}
+
+        
+    }
+
+    // Back side styling
+
+    &__cta {
+        width:90%;
+        position:absolute;
+        top:50%;
+        left:50%;
+        transform:translate(-50%, -50% );
+        text-align: center;
+        
+     }
+
+    &__price-box{
+        color:$color-white;
+        margin-bottom: 8rem;
+
+  }
+
+    &__price-only {
+        font-size: 1.4rem;
+        text-transform: uppercase;
+    }
+
+    &__price-value {
+        font-size: 6rem;
+        font-weight: 1oo;
+    }
+
+    
+    }
+
+
+
+
