--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -73,7 +73,7 @@
             display:inline-block;
             text-decoration: none;
             border-bottom: 1px solid $color-primary;
-            padding: .5rem;
+            padding: 1rem;
             transition: all 0.2s;
         }
 
