--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -29,3 +29,8 @@ transform: skewy(-7deg);
     padding: 25rem 0 10rem 0;
     margin-top: -12rem;
 }
+
+ .section-stories {
+    padding: 10rem 0;
+     position: relative;
+    }
