made custom radio button

--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -372,7 +372,8 @@ body {
   display: block;
   width: 90%;
   border-bottom: 3px solid transparent;
-  color: inherit; }
+  color: inherit;
+  transition: all .3s; }
   .form__input:focus {
     outline: none;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
@@ -394,6 +395,42 @@ body {
   opacity: 0;
   visibility: hidden;
   transform: translateY(-4rem); }
+
+.form__radio {
+  width: 49%;
+  display: inline-block;
+  position: relative; }
+  .form__radio-input {
+    display: none; }
+  .form__radio-label {
+    font-size: 1.6rem;
+    cursor: pointer;
+    padding: 3rem;
+    margin-left: 1rem; }
+  .form__radio-button {
+    height: 3rem;
+    width: 3rem;
+    border: 5px solid #55c57a;
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    top: -.4rem; }
+    .form__radio-button::after {
+      content: '';
+      display: block;
+      width: 1.5rem;
+      height: 1.5rem;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #55c57a;
+      opacity: 0;
+      transition: all .2s; }
+  .form__radio-input:checked ~ .form__radio-label + .form__radio-button::after {
+    opacity: 1; }
 
 .header {
   height: 95vh;
