--- a/Natours/sass/components/_form.scss
+++ b/Natours/sass/components/_form.scss
@@ -14,6 +14,7 @@
         width:90%;
         border-bottom: 3px solid transparent;
         color:inherit;
+        transition: all .3s;
 
         &:focus {
             outline: none;
@@ -48,4 +49,56 @@
         visibility: hidden;
         transform: translateY(-4rem);
     }
+
+    &__radio {
+        width:49%;
+        display: inline-block;
+         position: relative;
+
+         &-input {
+            display:none;
+         }
+        &-label{
+            font-size: $default-font-size;
+            cursor: pointer;
+            padding: 3rem;
+            margin-left: 1rem;
+
+        }
+
+        &-button {
+            height: 3rem;
+            width: 3rem;
+            border: 5px solid $color-primary;
+            border-radius: 50%;
+            display: inline-block;
+            position: absolute;
+            left: 0;
+            top: -.4rem;
+
+            &::after {
+                content:'';
+                display: block;
+                width: 1.5rem;
+                height: 1.5rem;
+                border-radius: 50%;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%,-50%);
+                background-color: $color-primary;
+                opacity: 0;
+                transition: all .2s;
+
+            }
+
+
+        }
+
+        &-input:checked ~ &-label + &-button::after{
+            opacity: 1;
+        }
+    }
+
+    
 }
