--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -1,6 +1,13 @@
 .btn{
 
-    &:link,
+    // for <button> element
+
+    &{
+        border: none;
+        cursor: pointer;
+    }
+
+    &,&:link,
     &:visited {
         text-transform: uppercase;
         text-decoration: none;
@@ -40,6 +47,7 @@
     &--green {
         background-color: $color-primary;
         color: $color-white;
+        
     
         &::after{
             background-color: $color-primary;
