--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -49,7 +49,7 @@ transform: skewy(-7deg);
     border-radius: 3px;
     box-shadow: 0 2rem 4rem rgba($color-black,.2);
    
-    height:50rem;
+    // height:50rem;
 
     &__form {
         width:50%;
