--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -13,6 +13,8 @@
  $color-white: #fff;
  $color-dark-gray:#777;
  $color-gray-dark-1:#999;
+ $color-gray-dark-2:#333;
+
  $color-black:#000;
  $color-gray-light-1:#f7f7f7;
 
