--- a/Natours/sass/base/_typography.scss
+++ b/Natours/sass/base/_typography.scss
@@ -4,7 +4,7 @@ body {
     font-weight: 400;
     line-height: 1.7;
     color:$color-dark-gray;
-    padding: 3rem;
+    
 }
 
 .heading-primary{
@@ -13,6 +13,7 @@ body {
     backface-visibility: hidden;
     margin-bottom: 6rem;
 
+   
     &--main{
         display: block;
         font-size: 6rem;
@@ -21,6 +22,12 @@ body {
         animation-name: moveInLeft;
         animation-duration: 1s;
         animation-timing-function: ease-out;
+
+        @include respond(phone) {
+        
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
     
 
     }
@@ -31,6 +38,13 @@ body {
         font-weight: 700;
         letter-spacing: 1.74rem;
         animation: moveInRight 1s ease-out;
+
+        @include respond(phone) {
+        
+            letter-spacing: .6rem;
+            
+        }
+
     }
 }
 
@@ -44,6 +58,16 @@ body {
     transition: all 0.2s;
     letter-spacing: .2rem;
     text-transform: uppercase;
+
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
+
+    
 
     &:hover{
         transform: skewY(2deg) skewX(15deg) scale(1.1);
