--- a/Natours/sass/components/_stories.scss
+++ b/Natours/sass/components/_stories.scss
@@ -9,6 +9,17 @@
      transform: skewX(-12deg);
      z-index: 100;
 
+     @include respond(tab-port){
+        width: 100%;
+        padding: 4rem ;
+        padding-left: 6rem;
+
+     }
+
+     @include respond (phone) {
+        transform: skewX((0));
+     }
+
      &__shape {
         width: 15rem;
         height:15rem;
@@ -17,6 +28,10 @@
          shape-outside: circle(50% at 50% 50%);
         clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem) skew(12deg);
+
+        @include respond (phone) {
+            transform: translateX(-3rem) skewX((0));
+         }
 
 
     }
@@ -29,6 +44,10 @@
 
     &__text{
         transform: skew(12deg);
+        @include respond (phone) {
+            transform: skewX((0));
+         }
+       
     
     }
 
