--- a/Natours/sass/components/_form.scss
+++ b/Natours/sass/components/_form.scss
@@ -55,6 +55,11 @@
         display: inline-block;
          position: relative;
 
+         @include respond(tab-port){
+            width: 100%;
+            margin-bottom: 2rem;
+         }
+
          &-input {
             display:none;
          }
