--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -63,9 +63,27 @@ transform: skewy(-7deg);
    
     // height:50rem;
 
+    @include respond(tab-land){
+        background-image:linear-gradient(105deg, rgba($color-white, .9 )0%, rgba($color-white, .9) 65%, transparent 65%),
+     url(../img/nat-10.jpg);
+     background-size: cover;
+    }
+    @include respond(tab-port){
+        background-image:linear-gradient(105deg, rgba($color-white, .9 )0%, rgba($color-white, .9) 65%),
+        url(../img/nat-10.jpg);
+    
+    }
+
     &__form {
         width:50%;
         padding: 6rem;
+        @include respond(tab-land){
+            width: 65%;
+        }
+
+        @include respond(tab-port){
+            width: 100%;
+        }
     }
 
 }
